# IoT-Anlytcs

./: .editorconfig  .prettierrc  Cargo.toml  README.md  angular.json  diesel.toml  hotreload.sh  package.json  tsconfig.app.json  tsconfig.spec.json  webpack.config.ts
config/: app-settings.yml
db-scripts/: setup.sql  struct.sql
migrations/2022-03-03-013518_sensor_info/: down.sql  up.sql
src/back/: main.rs
src/back/config/: application.rs  database.rs
src/back/controller/: router.rs  sensor_info_controller.rs  status.rs
src/back/domain/: entities.rs  schema.rs
src/back/http-utils/: br_encoding.rs
src/back/service/: sensor_info_service.rs
src/front/: index.html  styles.scss
src/front/app/: app.component.html  app.component.spec.ts  app.component.ts
