[package]
name = "iot-anlytcs"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "iot-anlytcs"
path = "src/back/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
actix-files = "0.6.1"
actix-service = "2.0.2"
actix-web = "4.1.0"
chrono = { version = "0.4.19", features = ["clock", "std", "serde"] }
concat_strs = "1.0.2"
config = { version = "0.13.1", features = ["json", "yaml", "preserve_order"] }
diesel = { version = "1.4.8", features = [
  "postgres",
  "chrono",
  "uuid",
  "serde_json",
  "r2d2",
] }
flexi_logger = "0.22.5"
futures = "0.3.21"
log = "0.4.17"
r2d2 = "0.8.9"
serde = "1.0.137"
serde_json = "1.0.81"
tokio = { version = "1.19.2", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.1.2", features = ["serde", "v4"] }
